--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -19,3 +19,16 @@ html, body {
     width: 100%;
     height: 100%;
   }
+
+#headerElementTitle{  
+  color: #fff;
+  transition: all ease 0.7s;
+  text-shadow: 0px 0px 7px white;
+  animation: pulse 10s infinite;
+}
+
+@keyframes pulse {
+  0% {color:#fff; text-shadow: 0px 0px 7px #fff;}
+  50% {color:#222;text-shadow: 0px 0px 0px #222;}
+  100% {color:#fff;text-shadow: 0px 0px 7px #fff;}
+}
