--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -20,7 +20,7 @@ html, body {
     height: 100%;
   }
 
-#headerElementTitle{  
+#burgerMenuWatermark{  
   color: #fff;
   transition: all ease 0.7s;
   text-shadow: 0px 0px 7px white;
@@ -29,6 +29,6 @@ html, body {
 
 @keyframes pulse {
   0% {color:#fff; text-shadow: 0px 0px 7px #fff;}
-  50% {color:#222;text-shadow: 0px 0px 0px #222;}
+  50% {color:#444;text-shadow: 0px 0px 0px #4444;}
   100% {color:#fff;text-shadow: 0px 0px 7px #fff;}
 }
