--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -32,3 +32,13 @@ html, body {
   50% {color:#444;text-shadow: 0px 0px 0px #4444;}
   100% {color:#fff;text-shadow: 0px 0px 7px #fff;}
 }
+
+::-webkit-scrollbar {
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 1em;
+  width: 0.8em;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.2));
+  border-radius: 1em;
+}
